--- a/assets/css/wp-admin.css
+++ b/assets/css/wp-admin.css
@@ -183,7 +183,6 @@
 :root .fa-rotate-270,
 :root .fa-flip-horizontal,
 :root .fa-flip-vertical {
-  -webkit-filter: none;
   filter: none;
 }
 
@@ -3048,13 +3047,13 @@
   clip: auto;
 }
 
-input.widget-checkhox {
+.widget-checkhox {
   display: none;
 }
 
 .fa {
+  color: #e9ecef;
   cursor: pointer;
-  color: #ccc;
   text-align: center;
   width: 4rem;
 }
