--- a/src/css/components/_breadcrumbs.sass
+++ b/src/css/components/_breadcrumbs.sass
@@ -1,5 +1,5 @@
 .breadcrumbs-container
-	margin: $spacer auto
+    margin: 2 * $spacer auto
 
-	.breadcrumb
-		margin-bottom: 0
+// .breadcrumb
+// 	margin-bottom: 0
