--- a/src/css/pages/_page-about.sass
+++ b/src/css/pages/_page-about.sass
@@ -1,4 +1,7 @@
-.page-about .card
-    h2, h3, h4
-        text-align: center
-        text-transform: uppercase
+.page-about
+    .card
+        h2,
+        h3,
+        h4
+            text-align: center
+            text-transform: uppercase
