--- a/src/css/components/_typography.sass
+++ b/src/css/components/_typography.sass
@@ -27,12 +27,11 @@ a
 	&.follow-me
 		color: $body-color
 
-		@each $current in $social-links
-			$i: index($social-links, $current)
-			.fa-#{$current}
+		@each $link, $color in $contact-links
+			.fa-#{$link}
 				display: block
-				color: nth($social-colors, $i)
+				color: $color
 				transition: $social-links-transition
 
 				&:hover
-					color: darken(nth($social-colors, $i), 10%)
+					color: darken($color, 10%)
