--- a/src/css/layout/_card.sass
+++ b/src/css/layout/_card.sass
@@ -1,39 +1,39 @@
-.card-wrapper,
-.card-deck-wrapper
-    margin-bottom: $spacer * 1.75
+// .card-wrapper,
+// .card-deck-wrapper
+
+// .card-deck
+//     .card
+//         margin-bottom: 1.875 * $spacer
 
 .card
-	box-shadow: $card-shadow
-	// margin-bottom: $spacer * 1.75
+    box-shadow: $card-shadow
+    margin-bottom: 1.875 * $spacer
 
-	.no-animation
-		animation: none !important
+    &.card-flat
+        box-shadow: none
+        // margin-bottom: $spacer
 
-	.card-header
-		background-color: $white
+    &.card-borderless
+        border: 0
 
-	&.card-flat
-		box-shadow: none
-		margin-bottom: $spacer
+    .card-header
+        .card-title
+            margin: 0
+            text-transform: uppercase
 
-	&.card-borderless
-		border: 0
+    .card-img
+        height: auto
 
-	.card-header .card-title
-		margin: 0
-		text-transform: uppercase
+    .post-meta
+        margin-bottom: $spacer
+        text-align: left
 
-	.post-meta
-		margin-bottom: $spacer
-		text-align: left
-
-		.meta-data
-			color: lighten(map-get($theme-colors, "dark"), 60%)
-			margin-bottom: $spacer
-
-	.card-img
-		height: auto
+        .meta-data
+            color: lighten(theme-color('dark'), 60%)
+            margin-bottom: $spacer
 
 @include media-breakpoint-up(md)
-	.card .post-meta .meta-data
-		margin-bottom: 0
+    .card
+        .post-meta
+            .meta-data
+                margin-bottom: 0
