Updated header layount on mobile devices

--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -667,7 +667,7 @@ $card-cap-bg:                       $white
 //
 // $card-img-overlay-padding:          1.25rem !default
 //
-$card-group-margin:                 1.875 * $spacer
+//$card-group-margin:                 1.875 * $spacer
 // $card-deck-margin:                  $card-group-margin !default
 //
 // $card-columns-count:                3 !default
