--- a/assets/css/wp-admin.css
+++ b/assets/css/wp-admin.css
@@ -3074,6 +3074,10 @@
   color: #db4437;
 }
 
+.fa.fa-active.fa-behance {
+  color: #1769ff;
+}
+
 .fa.fa-active.fa-linkedin {
   color: #1d87bd;
 }
