--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -919,6 +919,9 @@ $twitter: rgba(29, 161, 242, 1)
 // Google plus
 $google-plus: rgba(219, 68, 55, 1)
 
+// Behance
+$behance: rgba(23, 105, 255, 1)
+
 // Linkedin
 $linkedin: rgba(29, 135, 189, 1)
 
@@ -935,7 +938,7 @@ $reddit: rgba(95, 153, 207, 1)
 $mail: rgba(68, 68, 68, 1)
 
 // Profiles array
-$social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'google-plus': $google-plus, 'linkedin': $linkedin, 'pinterest': $pinterest, 'reddit': $reddit, 'github': $github, 'mail': $mail)
+$social-profiles: ('facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'google-plus': $google-plus, 'behance': $behance, 'linkedin': $linkedin, 'pinterest': $pinterest, 'reddit': $reddit, 'github': $github, 'mail': $mail)
 
 // Contact links
 $contact-links: ('envelope-o': $mail, 'facebook': $facebook, 'instagram': $instagram, 'twitter': $twitter, 'google-plus': $google-plus, 'linkedin': $linkedin, 'github': $github)
