--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -208,7 +208,7 @@ $body-color:                #292b2c
 // $border-width:                1px !default
 // $border-color:                $gray-300 !default
 //
-// $border-radius:               .25rem !default
+$border-radius:               0
 // $border-radius-lg:            .3rem !default
 // $border-radius-sm:            .2rem !default
 //
