--- a/src/css/amp.sass
+++ b/src/css/amp.sass
@@ -1,9 +1,9 @@
 // Variables
 @import '../../node_modules/bootstrap/scss/functions'
 @import '../../node_modules/bootstrap/scss/variables'
+@import '../../node_modules/bootstrap/scss/mixins'
 @import 'variables'
 @import 'components/fonts'
-// @import '../../node_modules/font-awesome/scss/font-awesome'
 @import 'components/typography'
 @import 'components/tags'
 @import 'components/social-media'
