--- a/src/css/components/_buttons.sass
+++ b/src/css/components/_buttons.sass
@@ -1,15 +1,6 @@
 .btn
-	border-radius: 0
-	transition: $social-links-transition
-	margin-bottom: $spacer
-	cursor: pointer
+    margin-bottom: $spacer
 
-.btn-primary-outline
-	border: $border-width solid brand-color("primary")
-	color: brand-color("primary")
-	background-color: transparent
-
-	&:hover
-		background-color: brand-color("primary")
-		color: white
-		box-shadow: inset 0px 0px 2px white
+.btn-primary
+    &:hover
+        background-color: darken($blue, 10%)
