--- a/src/css/components/_keyframes.sass
+++ b/src/css/components/_keyframes.sass
@@ -1,32 +1,17 @@
-// Send emaill
+// Send mail
 @keyframes send-mail
-	0%
+	0&
 		opacity: 1
 		transform: translateY(0%) scale(1)
+
 	70%
-		opacity: 0.5
-		transform: translateY(-500%) scale(0.6)
+		opacity: .5
+		transform: translateY(-500%) scale(.6)
+
 	71%
 		opacity: 0
-		transform: translateY(0%) scale(0.6)
+		transform: translateY(0%) scale(.6)
+
 	100%
 		opacity: 1
 		transform: translateY(0%) scale(1)
-
-// social media icons pop
-@keyframes icon-pop
-	0%
-		transform: scale(1)
-	30%
-		transform: scale(0.9)
-	100%
-		transform: scale(1.5)
-
-// social media icons pop 3x
-@keyframes icon-pop-3x
-	0%
-		transform: scale(1)
-	30%
-		transform: scale(0.9)
-	100%
-		transform: scale(1.3)
