--- a/src/css/components/_tags.sass
+++ b/src/css/components/_tags.sass
@@ -2,12 +2,12 @@
     padding: $spacer 0
 
     .fa-tag
-        color: white
-        background-color: theme-color("primary")
-        padding: $spacer / 2
-        line-height: $line-height-base
+        background-color: theme-color('primary')
+        border: 1px solid theme-color('primary')
+        color: $white
         font-size: $font-size-base
-        border: 1px solid theme-color("primary")
+        line-height: $line-height-base
+        padding: $spacer / 2
 
     .tags
         display: inline-block
@@ -16,14 +16,14 @@
         .tag
             display: inline-block
 
-        .tag a
-            padding: $spacer / 2
-            margin: $spacer / 4
-            font-size: $font-size-base
-            border: 1px solid theme-color("primary")
-            color: theme-color("primary")
-            transition: all 150ms ease-in-out
+            a
+                @include transition
+                border: 1px solid theme-color('primary')
+                color: theme-color('primary')
+                font-size: $font-size-base
+                margin: $spacer / 4
+                padding: $spacer / 2
 
             &:hover
-                color: white
-                background: theme-color("primary")
+                background: theme-color('primary')
+                color: $white
