--- a/src/css/layout/_footer.sass
+++ b/src/css/layout/_footer.sass
@@ -1,81 +1,39 @@
 .footer
-	background-color: $body-color
-	margin-top: $spacer * 2
-	padding: $spacer
-	color: $gray-500
-	text-align: center
+    background-color: $body-color
+    color: $body-bg
+    margin-top: 2 * $spacer
+    padding: $spacer
+    text-align: center
 
-	a
-		color: inherit
-		font-weight: bold
-		transition: ease-in-out .1s
+    a
+        @include transition
+        color: inherit
+        font-weight: 700
 
-		&:hover, &:active, &:focus
-			color: $gray-300
-			text-decoration: none
+        &:hover,
+        &:active,
+        &:focus
+            color: $gray-600
+            text-decoration: none
 
-	.container-fluid
-		width: 100%
+.footer-menu
+    padding: 0
 
-	.footer-subtitle
-		margin-top: $spacer
+    .nav-item
+        width: 100%
 
-	.footer-menu
-		list-style: none
-		overflow: hidden
-		margin-bottom: 0
-		padding: 0
+.footer-copyright
+    margin-top: 2 * $spacer
 
-		li
-			width: 100%
-			text-align: center
-			padding: 0
-			line-height: $line-height-base * 1.4
-
-			a
-				font-size: 1rem
-
-	.footer-subtitle
-		color: $body-bg
-
-	.social-icons
-		list-style: none
-		overflow: hidden
-		margin-bottom: $spacer * 2
-
-		li
-			float: left
-			width: calc(100% / 5)
-			text-align: center
-
-			a
-				color: $gray-100
-
-				// &:hover
-				// 	@each $current in $social-links
-				// 		$i: index($social-links, $current)
-				// 		.fa-#{$current}
-				// 			transition: $social-links-transition
-				// 			color: nth($social-colors, $i)
-
-// small to medium screens
 @include media-breakpoint-up(sm)
-	.footer
-		.footer-menu li
-			width: calc(100%/3)
-			float: left
-			text-align: center
+    .footer-menu
+        .nav-item
+            width: calc(100% / 4)
 
-		.social-icons
-			margin-bottom: 0
-
-// medium screens
 @include media-breakpoint-up(md)
-	.footer .footer-menu li
-		width: calc(100%/3)
+    .footer-menu
+        display: flex
+        justify-content: space-around
 
-// large screens
-//@include media-breakpoint-up(lg)
-@media (min-width: 1700px)
-	.footer .footer-menu li
-		width: calc(100%/6)
+        .nav-item
+            width: auto
