--- a/src/css/pages/_portfolio-website.sass
+++ b/src/css/pages/_portfolio-website.sass
@@ -1,21 +1,20 @@
 .single-website
 
     .card-title
-        text-align: center
         margin-bottom: $spacer
+        text-align: center
 
     .single-website-previews
         img
+            height: auto
             max-width: 100%
             width: 100%
-            height: auto
 
     .single-website-description
         order: -1
 
 @include media-breakpoint-up(md)
-    .single-website .single-website-description
-        order: 1
+    .single-website
+        .single-website-description
         align-self: flex-start
-        //position: sticky
-        //top: 80px
+        order: 1
