--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -18,7 +18,7 @@
 @import 'layout/card'
 
 // Modules
-@import 'components/keyframes'
+// @import 'components/keyframes'
 @import 'components/fonts'
 @import 'components/typography'
 @import 'components/breadcrumbs'
@@ -26,6 +26,7 @@
 @import 'components/buttons'
 @import 'components/inputs'
 @import 'components/tags'
+@import 'components/media'
 
 // Pages
 @import 'pages/page-about'
